<resources>
    <string name="app_name">UChannelBoosterAdmin</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="admin_users">Admin Users</string>
    <string name="app_users">App Users</string>
    <string name="view_tasks">View Tasks</string>
    <string name="like_tasks">Like Tasks</string>
    <string name="subscribe_tasks">Subscribe Tasks</string>
    <string name="edit_banners">Edit Banners</string>
    <string name="edit_coins">Edit Coins</string>
    <string name="edit_campaign_values">Edit Campaign Values</string>
    <string name="enter_id">Enter ID</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_password">Enter password</string>
    <string name="image_link">Image link</string>
    <string name="click_link">Click link</string>
    <string name="like">Like</string>
    <string name="view">View</string>
    <string name="subscribe">Subscribe</string>
    <string name="done">Done</string>
    <string name="task_key">TASK KEY</string>
    <string name="poster_id">POSTER ID</string>
    <string name="thumbnail">THUMBNAIL</string>
    <string name="video_url">VIDEO URL</string>
    <string name="total_views">TOTAL VIEWS</string>
    <string name="current_views">CURRENT VIEWS</string>
    <string name="completed_date">COMPLETED DATE</string>
    <string name="total_view_time">TOTAL VIEW TIME</string>
    <string name="enter_coins">Enter coins</string>
    <string name="enter_email">Enter email</string>
    <string name="truee">True</string>
    <string name="falsee">False</string>
    <string name="save">SAVE</string>
    <string name="time_list">Time List</string>
    <string name="quantity_list">Quantity List</string>
    <string name="subscribe_like_cut_off">Subscribe/Like Cut Off</string>
    <string name="tasks_cut_of_amount_subscribe">Tasks cut of amount (Subscribe)</string>
    <string name="tasks_cut_of_amount_like">Tasks cut of amount (Like)</string>
    <string name="tasks_cut_of_amount_view">Tasks cut of amount (View)</string>
    <string name="tasks_cut_of_amount_all">Tasks cut of amount (All)</string>
    <string name="view_coins_amount">View coins amount</string>
    <string name="subscribe_coins_amount">Subscribe coins amount</string>
    <string name="like_coins_amount">Like coins amount</string>
    <string name="update">Update</string>
    <string name="total_admin_users">TOTAL ADMIN USERS</string>
    <string name="total_mobile_users">TOTAL MOBILE USERS</string>
    <string name="total_view_tasks">TOTAL VIEW TASKS</string>
    <string name="total_subscribe_tasks">TOTAL SUBSCRIBE TASKS</string>
    <string name="total_like_tasks">TOTAL LIKE TASKS</string>
    <string name="loading">loading</string>
    <string name="log_out">Log out</string>
    <string name="adminusers">Admin Users</string>
    <string name="appusers">App Users</string>
    <string name="viewtasks">View Tasks</string>
    <string name="liketasks">Like Tasks</string>
    <string name="subscrietasks">Subscribe Tasks</string>
    <string name="editbanners">Edit Banners</string>
    <string name="editcoins">Edit Coins</string>
    <string name="editcampaignvalues">Edit Campaign Values</string>
    <string name="notifications">Send Notifications</string>
    <string name="coins_pack">Coins Pack</string>
    <string name="titleet">Enter title</string>
    <string name="descET">Enter description</string>
    <string name="sendBt">Send now</string>
    <string name="language">Change language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">Payment</string>
</resources>